20231213 code revision after first pull request

--- a/notebooks/Step2_Defining_working_set_of_species.ipynb
+++ b/notebooks/Step2_Defining_working_set_of_species.ipynb
@@ -5,7 +5,7 @@
    "id": "1a4caf9e",
    "metadata": {},
    "source": [
-    "## Definition of the working set of fungal species for FDA and trait association analysis\n",
+    "## Definition of the working set of fungal species for Fungal Divergent Actin (FDA) and trait association analysis\n",
     "\n",
     "**Notebook summary**\n",
     "\n",
@@ -16,10 +16,10 @@
     "\n",
     "\n",
     "**Context/Goal reminder**\n",
-    "In order to carry out trait mapping and association analysis between the presence/absence of FDA and fungal traits, we need to confidently establish the set of fungal species that do or don't possess FDA. This is what we call the working set. Because ProteinCartography relies and protein structures available in UniProt and AlphaFold, we decided to define our working set as any fungal species that has a minimum of 6000 protein structures in AlphaFold. \n",
+    "In order to carry out trait mapping and association analysis between the presence/absence of Fungal divergent actin (FDA) and fungal traits, we need to confidently establish the set of fungal species that do or don't possess FDA. This is what we call the working set. Because ProteinCartography relies and protein structures available in UniProt and AlphaFold, we decided to define our working set as any fungal species that has a minimum of 6000 protein structures in AlphaFold. We chose this threshold as studies have shown that Fungi can possess as little as 6000 proteins (https://doi.org/10.1186/s12575-015-0020-z; https://doi.org/10.1038/s41598-021-86201-6).\n",
     "\n",
     "**Notebook description**\n",
-    "In this notebook, we reformat the output of a Uniprot query to obtain the number of protein structure per fungal species. Then we filter out any fungal species than possess fewer than 6000 available structures and obtain their taxonomic informaation from NCBI."
+    "In this notebook, we reformat the output of a Uniprot query to obtain the number of protein structure per fungal species. Then we filter out any fungal species than possess fewer than 6000 available structures and obtain their taxonomic information from NCBI."
    ]
   },
   {
@@ -42,7 +42,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "7bb5cc95",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -76,7 +80,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b94829f7-1508-43e4-8e99-966f85de81fb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "getwd()"
@@ -94,7 +102,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "3ffd1ba1",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "## Function to fetch lineage information from NCBI Taxonomy database while providing species information\n",
@@ -144,7 +156,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "3f356e88",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -225,7 +241,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "c7c6d572",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -263,7 +283,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "bbb0656a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -349,7 +373,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "0e710077",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -387,7 +415,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "13009dd3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "## Save information about number of protein with available structure per fungal species\n",
@@ -399,7 +431,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "41a650f3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -493,7 +529,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "bf23c941",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -531,7 +571,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "16e1841c-6a43-41c8-9cab-b71af84f0135",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "## Save the data for fungal species with more than 6000 protein structures\n",
@@ -551,7 +595,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "0a2c11d8-e6bf-4b1c-bbc2-c19967ac592e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "## Reformat Organism name to fetch taxonomy in NCBI Taxonomy database\n",
@@ -565,7 +613,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "cc173723",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "## Fetching lineage information for each species in the NCBI Taxonomy database\n",
@@ -582,7 +634,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "cbcd2d94-e641-4c62-9a67-aefc0ab002e4",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -822,7 +878,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "3b197609",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -861,7 +921,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "479ad6f3-e5ba-4b9e-94b7-9917048b60b0",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -940,7 +1004,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "18cf5d77",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -969,7 +1037,11 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "cd189d33-0740-41d9-b9bd-78b5b497961c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1040,7 +1112,11 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "2372cc8b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1140,7 +1216,11 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "1429c072-6b26-4d9a-b21c-e4d38341e303",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1178,7 +1258,11 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "3a22de69",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1226,7 +1310,11 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "e70c9d4e-eda4-4634-a8d9-07865c2f9763",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1276,7 +1364,11 @@
    "cell_type": "code",
    "execution_count": 45,
    "id": "7ee400bc-de90-46eb-87ae-983c17a26665",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1333,7 +1425,11 @@
    "cell_type": "code",
    "execution_count": 62,
    "id": "3b8eae41-9ab3-40c0-8ed1-e21539d51dfc",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# First need to turn data_simplified into characters\n",
@@ -1345,7 +1441,11 @@
    "cell_type": "code",
    "execution_count": 63,
    "id": "6f8e9e72-a35f-4fb1-9679-f074a20d0a6c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "#For Melampsora\n",
@@ -1371,7 +1471,11 @@
    "cell_type": "code",
    "execution_count": 64,
    "id": "4f6bcff4-db45-4989-a8a3-ccafcf5f4a05",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1461,7 +1565,11 @@
    "cell_type": "code",
    "execution_count": 58,
    "id": "cc18f0af",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "## Saving list of species with unsuccessful taxonomy query\n",
@@ -1474,7 +1582,11 @@
    "cell_type": "code",
    "execution_count": 65,
    "id": "36bbef64",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "## Import the manually curated taxonomy for missing species\n",
@@ -1486,7 +1598,11 @@
    "cell_type": "code",
    "execution_count": 68,
    "id": "32580fc4",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1595,7 +1711,11 @@
    "cell_type": "code",
    "execution_count": 69,
    "id": "1d25d7b6",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "## Save the data\n",
@@ -1607,7 +1727,11 @@
    "cell_type": "code",
    "execution_count": 70,
    "id": "833eeb60-0363-42e4-8daf-d733e963d4c7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
