final edits before publication

--- a/notebooks/Step1_Taxonomic_analysis_extented_DFA_set.ipynb
+++ b/notebooks/Step1_Taxonomic_analysis_extented_DFA_set.ipynb
@@ -5,23 +5,23 @@
    "id": "6338a08d",
    "metadata": {},
    "source": [
-    "## Extented Fungal Divergent Actin (FDA) set - Taxonomic analysis - Kingdom level distribution\n",
+    "## Extented Divergent Fungal Actin (DFA) set - Taxonomic analysis - Kingdom level distribution\n",
     "\n",
     "**Notebook summary**\n",
     "\n",
     "This Jupyter Notebook:\n",
     "- Sorts taxonomic information of the species from the extented cluster into kingdom, phylum and order taxonomic ranks\n",
-    "- Is associated with Step 1 of the Pub approach: Expanding the initial set of fungal species that possess FDA\n",
+    "- Is associated with Step 1 of the Pub approach: Expanding the initial set of fungal species that possess DFA\n",
     "- Provides the code for the Pub Figures 4A\n",
     "\n",
     "\n",
     "**Context/Goal reminder**\n",
-    "Fungal Divergent Actins (FDAs) have been identified in another Arcadia's project as potentially new acti isoform mainly found in Fungi. In this work, we have identified an extented set of 436 FDA sequences by combining the 2 new clusters identified in the FDA ProteinCartography run and the original FDA cluster. While the original cluster mainly contain fungal species, we want to characterize the kingdom-level distribution of the organisms that possess FDA in the extended cluster. \n",
+    "Divergent Fungal Actins (DFAs) have been identified in another Arcadia's project as potentially new actin isoform mainly found in Fungi. In this work, we have identified an extented set of 436 DFA sequences by combining the 2 new clusters identified in the DFA ProteinCartography run and the original DFA cluster. While the original cluster mainly contain fungal species, we want to characterize the kingdom-level distribution of the organisms that possess DFA in the extended cluster. \n",
     "\n",
     "**Notebook purpose**\n",
-    "The purpose of this notebook is to investigate the extended set of FDA sequences and the taxonomy of the associated species. In this notebook, we:\n",
-    "- characterize the different kingdom where FDA is found\n",
-    "- visualize the distribution of FDA at the kingdom level"
+    "The purpose of this notebook is to investigate the extended set of DFA sequences and the taxonomy of the associated species. In this notebook, we:\n",
+    "- characterize the different kingdom where DFA is found\n",
+    "- visualize the distribution of DFA at the kingdom level"
    ]
   },
   {
@@ -190,7 +190,7 @@
    "source": [
     "## Data import\n",
     "\n",
-    "data_ext=read.csv('data/step1/Extended_cluster_hits_FDA.csv')  # file with extended cluster information (resulting from the combnation of the new ProteinCartography FDA clusters and original FDA cluster)"
+    "data_ext=read.csv('data/step1/Extended_cluster_hits_DFA.csv')  # file with extended cluster information (resulting from the combnation of the new ProteinCartography DFA clusters and original DFA cluster)"
    ]
   },
   {
@@ -315,8 +315,8 @@
    ],
    "source": [
     "## Sorting taxonomic information into kingdom/phylum, and order\n",
-    "FDA_clust_taxo=lin_inf_str(data_ext)\n",
-    "head(FDA_clust_taxo,10)"
+    "DFA_clust_taxo=lin_inf_str(data_ext)\n",
+    "head(DFA_clust_taxo,10)"
    ]
   },
   {
@@ -444,11 +444,11 @@
     "    # 16 entries have no kingdom rank\n",
     "    # we have to curate them manually and add clade information instead: This includes: Discoba, Sar, Amoebozoa and Opisthokonta\n",
     "\n",
-    "write.csv(FDA_clust_taxo,\"results/step1/FDA_clust_taxo_final_intermed.csv\")\n",
+    "write.csv(DFA_clust_taxo,\"results/step1/DFA_clust_taxo_final_intermed.csv\")\n",
     "\n",
     "## Manually corrected data import\n",
-    "data_taxo_FDA=read.csv('data/step1/FDA_clust_taxo_manually_corrected.csv')[-1]\n",
-    "head(data_taxo_FDA,10)\n"
+    "data_taxo_DFA=read.csv('data/step1/DFA_clust_taxo_manually_corrected.csv')[-1]\n",
+    "head(data_taxo_DFA,10)\n"
    ]
   },
   {
@@ -528,9 +528,9 @@
    ],
    "source": [
     "## Kingdom / Clade species count\n",
-    "    # To investigate the distribution of FDA at the kingdom level, we now count how many protein hits were found for each kingdom or clade\n",
+    "    # To investigate the distribution of DFA at the kingdom level, we now count how many protein hits were found for each kingdom or clade\n",
     "\n",
-    "taxo_table=as.data.frame(t(table(data_taxo_FDA$Kingdom)))\n",
+    "taxo_table=as.data.frame(t(table(data_taxo_DFA$Kingdom)))\n",
     "\n",
     "colnames(taxo_table)=c('tip.label','Taxo','nb_hits')\n",
     "\n",
@@ -573,9 +573,9 @@
     }
    ],
    "source": [
-    "## Tree representation of FDA kingdom/clade distribution (Figure 4A)\n",
+    "## Tree representation of DFA kingdom/clade distribution (Figure 4A)\n",
     "\n",
-    "tree_king=read.tree('data/step1/FDA_king_tree.nwk')  # import the newick phylogenetic tree file\n",
+    "tree_king=read.tree('data/step1/DFA_king_tree.nwk')  # import the newick phylogenetic tree file\n",
     "\n",
     "tree_tips=c(intersect(tree_king$tip.label,taxo_table$tip.label)) # make sure that data are consistent between table and tree tips\n",
     "\n",
