--- a/notebooks/Step2_Defining_working_set_of_species.ipynb
+++ b/notebooks/Step2_Defining_working_set_of_species.ipynb
@@ -5,7 +5,7 @@
    "id": "1a4caf9e",
    "metadata": {},
    "source": [
-    "## Definition of the working set of fungal species for Fungal Divergent Actin (FDA) and trait association analysis\n",
+    "## Definition of the working set of fungal species for Divergent Fungal Actin (DFA) and trait association analysis\n",
     "\n",
     "**Notebook summary**\n",
     "\n",
@@ -16,7 +16,7 @@
     "\n",
     "\n",
     "**Context/Goal reminder**\n",
-    "In order to carry out trait mapping and association analysis between the presence/absence of Fungal divergent actin (FDA) and fungal traits, we need to confidently establish the set of fungal species that do or don't possess FDA. This is what we call the working set. Because ProteinCartography relies and protein structures available in UniProt and AlphaFold, we decided to define our working set as any fungal species that has a minimum of 6000 protein structures in AlphaFold. We chose this threshold as studies have shown that Fungi can possess as little as 6000 proteins (https://doi.org/10.1186/s12575-015-0020-z; https://doi.org/10.1038/s41598-021-86201-6).\n",
+    "In order to carry out trait mapping and association analysis between the presence/absence of Divergent Fungal Actin (DFA) and fungal traits, we need to confidently establish the set of fungal species that do or don't possess DFA. This is what we call the working set. Because ProteinCartography relies and protein structures available in UniProt and AlphaFold, we decided to define our working set as any fungal species that has a minimum of 6000 protein structures in AlphaFold. We chose this threshold as studies have shown that Fungi can possess as little as 6000 proteins (https://doi.org/10.1186/s12575-015-0020-z; https://doi.org/10.1038/s41598-021-86201-6).\n",
     "\n",
     "**Notebook description**\n",
     "In this notebook, we reformat the output of a Uniprot query to obtain the number of protein structure per fungal species. Then we filter out any fungal species than possess fewer than 6000 available structures and obtain their taxonomic information from NCBI."
