--- a/notebooks/Step2_Order_distribution_DFA_Figure4B.ipynb
+++ b/notebooks/Step2_Order_distribution_DFA_Figure4B.ipynb
@@ -5,19 +5,19 @@
    "id": "a71965e9",
    "metadata": {},
    "source": [
-    "## Distribution of Fungal Divergent Actin (FDA) in fungal orders\n",
+    "## Distribution of Divergent Fungal Actin (DFA) in fungal orders\n",
     "\n",
     "**Notebook summary**\n",
     "This Jupyter Notebook:\n",
-    "- analyses and visualizes the distribution of FDA in Fungi at the order level\n",
+    "- analyses and visualizes the distribution of DFA in Fungi at the order level\n",
     "- is associated with Step 2 of the Pub approach: Defining the ‘working set of species’\n",
     "- provides the codes for the Pub Figures 4B\n",
     "\n",
     "**Context/Goal reminder**\n",
-    "We have been able to determine our working set of 853 fungal species. For each of these fungal species we are able to detremine their FDA presence/absence status. To have a better understanding of the distribution of FDA in the Fungi kingdom, we study the distribution of FDA at the fungi order level by analysing and visualizing what fraction of each order possess FDA (ie the number of species taht possess FDA in an order divided by the total number of species in this order)\n",
+    "We have been able to determine our working set of 853 fungal species. For each of these fungal species we are able to detremine their DFA presence/absence status. To have a better understanding of the distribution of DFA in the Fungi kingdom, we study the distribution of DFA at the fungi order level by analysing and visualizing what fraction of each order possess DFA (ie the number of species that possess DFA in an order divided by the total number of species in this order)\n",
     "\n",
     "**Notebook purpose**\n",
-    "In this notebook, we determine the FDA status of all the species in the working set and then study distribution of FDA at the fungi order level. We eventually visualize this information onto a order level phylogenetic tree."
+    "In this notebook, we determine the DFA status of all the species in the working set and then study distribution of DFA at the fungi order level. We eventually visualize this information onto a order level phylogenetic tree."
    ]
   },
   {
@@ -182,8 +182,8 @@
     "\n",
     "all_set=read.csv('results/step2/uniprot_all_wset_taxo.csv')[,-1]  # working set\n",
     "\n",
-    "FDA_set=read.csv('data/step1/FDA_clust_taxo_manually_corrected.csv')[,-1] # FDA extented set\n",
-    "FDA_set_f=subset(FDA_set,FDA_set$Kingdom=='Fungi')\n"
+    "DFA_set=read.csv('data/step1/DFA_clust_taxo_manually_corrected.csv')[,-1] # DFA extented set\n",
+    "DFA_set_f=subset(DFA_set,DFA_set$Kingdom=='Fungi')\n"
    ]
   },
   {
@@ -197,11 +197,11 @@
    },
    "outputs": [],
    "source": [
-    "## Adding FDA information status to the working set\n",
-    "    # Any species in the extended set possess FDA, while species in the working set but not in the extented set don't possess FDA\n",
+    "## Adding DFA information status to the working set\n",
+    "    # Any species in the extended set possess DFA, while species in the working set but not in the extented set don't possess DFA\n",
     "\n",
-    "FDA_fungi_species=data.frame('Organism_uniprot'=c(unique(as.character(FDA_set_f$Organism))),\n",
-    "                             'FDA'='Yes') \n",
+    "DFA_fungi_species=data.frame('Organism_uniprot'=c(unique(as.character(DFA_set_f$Organism))),\n",
+    "                             'DFA'='Yes') \n",
     "\n"
    ]
   },
@@ -348,14 +348,14 @@
     "all_set_ch<- all_set %>%\n",
     "  mutate_all(~as.character(.))\n",
     "\n",
-    "FDA_fungi_species_ch<- FDA_fungi_species %>%\n",
+    "DFA_fungi_species_ch<- DFA_fungi_species %>%\n",
     "  mutate_all(~as.character(.))\n",
     "\n",
-    "all_set_w_FDA=left_join(all_set_ch,FDA_fungi_species_ch,by='Organism_uniprot') \n",
+    "all_set_w_DFA=left_join(all_set_ch,DFA_fungi_species_ch,by='Organism_uniprot') \n",
     "\n",
-    "all_set_w_FDA$FDA[is.na(all_set_w_FDA$FDA)]<-'No'\n",
+    "all_set_w_DFA$DFA[is.na(all_set_w_DFA$DFA)]<-'No'\n",
     "\n",
-    "head(all_set_w_FDA,15)"
+    "head(all_set_w_DFA,15)"
    ]
   },
   {
@@ -446,24 +446,24 @@
     }
    ],
    "source": [
-    "## Calculate fraction of FDA at the order level\n",
-    "    # for each fungal order we calulate the order FDA fraction as the number of species with FDA in the order divided by the number of species in the order\n",
+    "## Calculate fraction of DFA at the order level\n",
+    "    # for each fungal order we calulate the order DFA fraction as the number of species with DFA in the order divided by the number of species in the order\n",
     "\n",
-    "Levels=na.omit(c(unique(all_set_w_FDA$order)))\n",
+    "Levels=na.omit(c(unique(all_set_w_DFA$order)))\n",
     "\n",
     "df_order=data.frame()\n",
     "for (i in 1:length(Levels)){\n",
-    "  dat_temp=subset(all_set_w_FDA, all_set_w_FDA$order==Levels[i])\n",
+    "  dat_temp=subset(all_set_w_DFA, all_set_w_DFA$order==Levels[i])\n",
     "  n=dim(dat_temp)[1]\n",
     "  phy=unique(dat_temp[,'phylum'])\n",
-    "  FDA=sum(dat_temp$FDA==\"Yes\")\n",
+    "  DFA=sum(dat_temp$DFA==\"Yes\")\n",
     "  \n",
     "  df_temp=data.frame('Order'=Levels[i],\n",
     "                     'Order_size'=n,\n",
     "                     'Phylum'=phy,\n",
-    "                     'FDA_yes'=FDA,\n",
-    "                     'FDA_no'=(n-FDA),\n",
-    "                     'FDA_frac'=FDA/n)\n",
+    "                     'DFA_yes'=DFA,\n",
+    "                     'DFA_no'=(n-DFA),\n",
+    "                     'DFA_frac'=DFA/n)\n",
     "  \n",
     "  df_order=rbind(df_order, df_temp)\n",
     "  \n",
@@ -484,8 +484,8 @@
    "outputs": [],
    "source": [
     "## Save order information table\n",
-    "write.csv(all_set_w_FDA, 'results/step2/working_set_w_FDA.csv')\n",
-    "write.csv(df_order, 'results/step2/order_information_FDA_fraction.csv')"
+    "write.csv(all_set_w_DFA, 'results/step2/working_set_w_DFA.csv')\n",
+    "write.csv(df_order, 'results/step2/order_information_DFA_fraction.csv')"
    ]
   },
   {
@@ -525,7 +525,7 @@
    "source": [
     "## Define the set of orders present in our dataset and trim the tree\n",
     "\n",
-    "order_uni=c(unique(all_set_w_FDA$order))  # orders present in our working set\n",
+    "order_uni=c(unique(all_set_w_DFA$order))  # orders present in our working set\n",
     "\n",
     "inter_order=intersect(tree_order$tip.label,order_uni) #look at intersection with tree tips\n",
     "\n",
@@ -596,11 +596,11 @@
     "pt1=pt + geom_tippoint(aes(color=Phylum)) +\n",
     "  scale_color_manual(values=c((accent_ordered))) \n",
     "\n",
-    "    # Adding the heatmap for the FDA fraction\n",
+    "    # Adding the heatmap for the DFA fraction\n",
     "\n",
     "pt2 = pt1 + new_scale_fill() +\n",
     "  geom_fruit(geom=geom_tile,\n",
-    "             mapping=aes(y=tip.label, fill=FDA_frac, width=2),\n",
+    "             mapping=aes(y=tip.label, fill=DFA_frac, width=2),\n",
     "             color = \"grey50\", offset = 0.08) +\n",
     "  scale_fill_viridis_c(direction=1, option='D')\n",
     "\n",
