final edits typos correction

--- a/notebooks/Step3_Curating_and_maping_trait_information.ipynb
+++ b/notebooks/Step3_Curating_and_maping_trait_information.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "This Jupyter Notebook:\n",
     "- Exports a .csv version on FunFun\n",
-    "- Extracts trait information for species that overlap with our working set and have a consistent Divergent Fungi Actin (DFA) status at the strain level\n",
+    "- Extracts trait information for species that overlap with our working set and have a consistent Divergent Fungal Actin (DFA) status at the strain level\n",
     "- Provides the code for the Pub Figure 5\n",
     "\n",
     "\n",
