--- a/notebooks/Step4_Statistical_modeling.ipynb
+++ b/notebooks/Step4_Statistical_modeling.ipynb
@@ -5,7 +5,7 @@
    "id": "39be76d1-8555-4f4e-8933-efa6b2ae09aa",
    "metadata": {},
    "source": [
-    "## Statistical modeling of the association of Divergent Fungi Divergent Actin (DFA) and fungal trait\n",
+    "## Statistical modeling of the association of Divergent Fungal Actin (DFA) and fungal trait\n",
     "\n",
     "**Notebook summary**\n",
     "\n",
@@ -16,7 +16,7 @@
     "\n",
     "\n",
     "**Context/Goal reminder**\n",
-    "We aim to test for any sigificant association between the presence/absence of Divergent Fungi Divergent Actin (DFA) and specific fungal traits in order to make hypothesis about the function of DFA. We fit different models for each trait.\n",
+    "We aim to test for any sigificant association between the presence/absence of Divergent Fungal Actin (DFA) and specific fungal traits in order to make hypothesis about the function of DFA. We fit different models for each trait.\n",
     "Presence/absence of DFA is a binary variable and fungal traits are either binary (auxin responsive promoter), continuous (spore length and spore width) or discrete variables (Ascus dehiscence, growth form and trophic mode).\n",
     "\n",
     "\n",
